--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": "",
+  "author": "Akshay Sankpal",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
